--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="welcome_msg">Welcome!</string>
     <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
     <string name="invite_menu_label">Invite</string>
-    <string name="invitation_message">Please join me for a friendly chat</string>
+    <string name="invitation_message">Try this app to help with Android developer interviews! </string>
     <string name="invitation_cta">Call to action</string>
-    <string name="invitation_title">Friendly Chat Invite</string>
+    <string name="invitation_title">Android Interview Invite</string>
 
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
@@ -15,7 +15,6 @@
     <string name="drawer_close">Close Navigation Drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="fresh_config">Fresh Config</string>
     <string name="cause_crash">Cause Crash</string>
     <string name="sign_out">Sign Out</string>
     <string name="add_question_activity_title">Add New Question</string>
@@ -23,5 +22,6 @@
     <string name="answer">Answer:</string>
     <string name="url_reference">Url Reference:</string>
     <string name="activity_add_question_detail">Enter an awesome question so we can add it to our database!</string>
+    <string name="questions_list_fragment_review">Questions to Review</string>
 
 </resources>
